# hypixel-bank-tracker

./: .env  .env.example  .gitignore  Cargo.toml  README.md  bun.lockb  data.json.bak  data.json.example  devenv.nix  flake.nix  index.html.hbs  index.ts  module.nix  package.json  package.nix  script.js  styles.css
.helix/: languages.toml
src/: helpers.rs  index.ts  main.rs  models.rs  pool.rs
static/: script.js  style.css  styles.css
templates/: index.html  index.html.hbs
