[package]
name = "hypixel-bank-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.13"
chrono = "0.4"
dotenvy = "0.15"
parking_lot = "0.12.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[lints]
[lints.rust]
unsafe_code = "deny"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

redundant_pub_crate = "allow"
missing_const_for_fn = "allow"
dbg_macro = "warn"
